--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Stewardship.IS Presentation</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Stewardship.IS, Inc. – Your Partner for Streamlined Revenue Data Solutions</h1>
+        <p>Reducing workload, improving automation, and delivering value through a Single Data Source (SDS)</p>
+    </header>
+    
+    <section>
+        <h2>Introduction</h2>
+        <p>We offer full-cycle solutions to reduce workload and enhance data efficiency...</p>
+    </section>
+    
+    <section>
+        <h2>Pain Points</h2>
+        <p>Common challenges in revenue data management include inefficiencies...</p>
+    </section>
+
+    <!-- Add more sections as needed -->
+
+    <footer>
+        <p>&copy; 2024 Stewardship.IS, Inc. All rights reserved.</p>
+    </footer>
+</body>
+</html>
 
