--- a/index.html
+++ b/index.html
@@ -11,22 +11,71 @@
         <h1>Stewardship.IS, Inc. – Your Partner for Streamlined Revenue Data Solutions</h1>
         <p>Reducing workload, improving automation, and delivering value through a Single Data Source (SDS)</p>
     </header>
-    
+
+    <!-- Slide 2: Introduction -->
     <section>
         <h2>Introduction</h2>
-        <p>We offer full-cycle solutions to reduce workload and enhance data efficiency...</p>
+        <p>We offer a comprehensive, automated approach to managing revenue data. We are not just providers of .txt files but offer full-cycle solutions to reduce workload and enhance data efficiency. Our goal is to reduce cost wastes and enhance accuracy through automation and streamlined processes.</p>
     </section>
-    
+
+    <!-- Slide 3: Pain Points -->
     <section>
-        <h2>Pain Points</h2>
-        <p>Common challenges in revenue data management include inefficiencies...</p>
+        <h2>Pain Points in Current Processes</h2>
+        <p>Common challenges in revenue data management include inefficiencies, overburdened ACCT teams with converting files like Sirius Excel/PDFs into usable formats, and a lack of a Single Data Source (SDS) leading to fragmented and time-consuming processes.</p>
     </section>
 
-    <!-- Add more sections as needed -->
+    <!-- Slide 4: Solution Overview -->
+    <section>
+        <h2>Solution Overview</h2>
+        <ul>
+            <li><strong>Sirius Excel/PDF to .txt File Conversion:</strong> We fully automate the conversion of Sirius files, reducing the workload on ACCT teams.</li>
+            <li><strong>Better Value for EL PDFs:</strong> We convert EL PDFs to .txt files at a better price point, adding value while maintaining quality.</li>
+            <li><strong>Free Excel Outputs:</strong> For all revenue statements, we provide complementary Excel outputs, eliminating extra charges for this essential format.</li>
+            <li><strong>Single Data Source (SDS):</strong> Stewardship.IS acts as a central hub for all revenue data, ensuring streamlined processing.</li>
+            <li><strong>Full-Cycle Revenue Automation:</strong> Our end-to-end process improves template population and data generation, leading to faster, more accurate revenue statements.</li>
+        </ul>
+    </section>
 
+    <!-- Slide 5: Key Differentiators -->
+    <section>
+        <h2>Key Differentiators</h2>
+        <ul>
+            <li><strong>Efficiency & Automation:</strong> We automate complex, manual processes, drastically reducing workload.</li>
+            <li><strong>Cost Savings:</strong> Our approach reduces redundant processes, cutting operational costs.</li>
+            <li><strong>Single Data Source (SDS):</strong> We consolidate all revenue data into one system, streamlining your operations.</li>
+            <li><strong>Scalability:</strong> Our automated solutions are adaptable to any volume of revenue statements and vendors.</li>
+            <li><strong>Expertise:</strong> Proven track record of improving data accuracy and value.</li>
+        </ul>
+    </section>
+
+    <!-- Slide 6: How It Works -->
+    <section>
+        <h2>How It Works</h2>
+        <p>Our Automated Process Flow: Input data (Excel/PDF) → Automated Conversion (Sirius/EL) → Excel/.txt file generation → Single Data Source storage → Full-cycle template population → Final Revenue Statement</p>
+    </section>
+
+    <!-- Slide 7: Benefits -->
+    <section>
+        <h2>Benefits</h2>
+        <ul>
+            <li><strong>Time Savings:</strong> Automated processes free up your ACCT team for higher-value tasks.</li>
+            <li><strong>Reduced Errors:</strong> Automation minimizes human errors in data conversion and processing.</li>
+            <li><strong>Cost Efficiency:</strong> Our services reduce data management costs by eliminating redundant manual processes.</li>
+            <li><strong>Data Centralization:</strong> A Single Data Source ensures all revenue statements are processed consistently and quickly.</li>
+            <li><strong>Scalability & Flexibility:</strong> Our system grows with your needs, regardless of vendor or statement type.</li>
+        </ul>
+    </section>
+
+    <!-- Slide 8: Conclusion -->
+    <section>
+        <h2>Conclusion & Next Steps</h2>
+        <p>Ready to Transform Your Revenue Data Management? Partner with Stewardship.IS, Inc. to automate, streamline, and enhance your revenue data processes. We provide better value through process automation, Single Data Source, and eliminating inefficiencies of the past.</p>
+        <p>Contact us to set up a personalized consultation or demo of our system.</p>
+    </section>
+
+    <!-- Footer -->
     <footer>
         <p>&copy; 2024 Stewardship.IS, Inc. All rights reserved.</p>
     </footer>
 </body>
 </html>
-
