--- a/index.html
+++ b/index.html
@@ -5,27 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stewardship.IS Presentation</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>Stewardship.IS, Inc. – Your Partner for Streamlined Revenue Data Solutions</h1>
-        <p>Reducing workload, improving automation, and delivering value through a Single Data Source (SDS)</p>
+        <div class="header-content">
+            <h1>Stewardship.IS, Inc.</h1>
+            <p>Your Partner for Streamlined Revenue Data Solutions</p>
+            <p class="sub-header">Reducing workload, improving automation, and delivering value through a Single Data Source (SDS)</p>
+        </div>
     </header>
 
     <!-- Slide 2: Introduction -->
-    <section>
+    <section class="content-section">
         <h2>Introduction</h2>
         <p>We offer a comprehensive, automated approach to managing revenue data. We are not just providers of .txt files but offer full-cycle solutions to reduce workload and enhance data efficiency. Our goal is to reduce cost wastes and enhance accuracy through automation and streamlined processes.</p>
     </section>
 
     <!-- Slide 3: Pain Points -->
-    <section>
+    <section class="content-section">
         <h2>Pain Points in Current Processes</h2>
         <p>Common challenges in revenue data management include inefficiencies, overburdened ACCT teams with converting files like Sirius Excel/PDFs into usable formats, and a lack of a Single Data Source (SDS) leading to fragmented and time-consuming processes.</p>
     </section>
 
     <!-- Slide 4: Solution Overview -->
-    <section>
+    <section class="content-section">
         <h2>Solution Overview</h2>
         <ul>
             <li><strong>Sirius Excel/PDF to .txt File Conversion:</strong> We fully automate the conversion of Sirius files, reducing the workload on ACCT teams.</li>
@@ -37,7 +41,7 @@
     </section>
 
     <!-- Slide 5: Key Differentiators -->
-    <section>
+    <section class="content-section">
         <h2>Key Differentiators</h2>
         <ul>
             <li><strong>Efficiency & Automation:</strong> We automate complex, manual processes, drastically reducing workload.</li>
@@ -49,13 +53,13 @@
     </section>
 
     <!-- Slide 6: How It Works -->
-    <section>
+    <section class="content-section">
         <h2>How It Works</h2>
-        <p>Our Automated Process Flow: Input data (Excel/PDF) → Automated Conversion (Sirius/EL) → Excel/.txt file generation → Single Data Source storage → Full-cycle template population → Final Revenue Statement</p>
+        <p>Our Automated Process Flow: Input data (Excel/PDF) → Automated Conversion (Sirius/EL) → Excel/.txt file generation → Single Data Source storage → Full-cycle template population → Final Revenue Statement.</p>
     </section>
 
     <!-- Slide 7: Benefits -->
-    <section>
+    <section class="content-section">
         <h2>Benefits</h2>
         <ul>
             <li><strong>Time Savings:</strong> Automated processes free up your ACCT team for higher-value tasks.</li>
@@ -67,7 +71,7 @@
     </section>
 
     <!-- Slide 8: Conclusion -->
-    <section>
+    <section class="content-section">
         <h2>Conclusion & Next Steps</h2>
         <p>Ready to Transform Your Revenue Data Management? Partner with Stewardship.IS, Inc. to automate, streamline, and enhance your revenue data processes. We provide better value through process automation, Single Data Source, and eliminating inefficiencies of the past.</p>
         <p>Contact us to set up a personalized consultation or demo of our system.</p>
